<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity"
    android:padding="10dp"
    android:orientation="vertical">

    <!-- <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@android:drawable/ic_menu_gallery"
        android:layout_margin="5dp"/> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/request_name" />

    <EditText
        android:id="@+id/nombreForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"/>
    <!-- contraseña-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/request_password" />

    <EditText
        android:id="@+id/contraseniaForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- repetir contraseña-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/request_password_repeated" />

    <EditText
        android:id="@+id/contraseniaRepetidaForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--
    Mi version anterior
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="string/request_dni" />

        <EditText
            android:id="@+id/dniForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="12345678"/>
    </LinearLayout>-->

    <!--+TIPO:-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/request_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioAdministradorForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/check_administrador" />

                <RadioButton
                    android:id="@+id/radioUsuarioForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_usuario" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btnGuardarForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:text="@string/btn_save" />
    </FrameLayout>

</LinearLayout>